--- a/packages/github/styles/file-summary.less
+++ b/packages/github/styles/file-summary.less
@@ -1,6 +1,6 @@
 @import "variables";
 
-git-file-summary-view {
+git-file-summary-element {
   -webkit-user-select: none;
   display:block;
   padding: 0 10px;
