--- a/packages/github/styles/status-list.less
+++ b/packages/github/styles/status-list.less
@@ -47,7 +47,7 @@ git-status-list-view {
         content:'Nothing to commit';
       }
 
-      git-file-summary-view:last-child {
+      git-file-summary-element:last-child {
         box-shadow:none;
       }
     }
