Use old and new patch view selectors where appropriate

--- a/packages/github/styles/patch.less
+++ b/packages/github/styles/patch.less
@@ -1,6 +1,6 @@
 @import "variables";
 
-git-patch-view {
+git-patch-view, git-patch {
   display: block;
   color: @syntax-text-color;
   background: @syntax-background-color;
