Revert parent selector adjustment

--- a/packages/markdown-preview/styles/markdown-preview.less
+++ b/packages/markdown-preview/styles/markdown-preview.less
@@ -14,11 +14,11 @@
   line-height: 1.6;
   word-wrap: break-word;
 
-  & > *:first-child {
+  > *:first-child {
     margin-top: 0 !important;
   }
 
-  & > *:last-child {
+  > *:last-child {
     margin-bottom: 0 !important;
   }
 
@@ -223,11 +223,11 @@
     color: #777;
     border-left: 4px solid #ddd;
 
-    & > :first-child {
+    > :first-child {
       margin-top: 0;
     }
 
-    & > :last-child {
+    > :last-child {
       margin-bottom: 0;
     }
   }
