--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -274,6 +274,8 @@
     font-size: 1.4em;
     font-weight: bold;
     line-height: 1;
+    -webkit-user-select: none;
+    cursor: default;
   }
 
   .control-label {
