Fix config menu user select

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -310,6 +310,7 @@
     flex: 1.6;
     min-width: 180px;
     max-width: 240px;
+    -webkit-user-select: none;
     user-select: none;
     padding-top: @component-padding;
     background-color: lighten(@base-background-color, 2%);
