Display buttons inline

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -86,6 +86,11 @@
     }
   }
 
+  .select-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
   .checkbox {
     padding-left: 2.25em;
     .setting-title {
