Fix inline buttons display

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -91,6 +91,14 @@
     align-items: center;
   }
 
+  .btn.current-theme-settings {
+    margin-left: 2px;
+    &::before {
+      margin-right: 0;
+      text-align: left;
+    }
+  }
+
   .checkbox {
     padding-left: 2.25em;
     .setting-title {
