Align button with select

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -86,9 +86,9 @@
     }
   }
 
-  .select-wrapper {
+  .select-container {
     display: flex;
-    align-items: center;
+    align-items: stretch;
   }
 
   .btn.current-theme-settings {
