Only show scrollbar when there is overflow

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -45,7 +45,7 @@ atom-workspace.find-visible {
 
   -webkit-user-select: none;
   padding: @component-padding/2;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   .header {
     padding: @component-padding/4 @component-padding/2;
