--- a/packages/status-bar/styles/status-bar.less
+++ b/packages/status-bar/styles/status-bar.less
@@ -34,6 +34,10 @@ status-bar {
   .status-bar-right {
     padding-left: @component-padding;
     overflow-x: auto;
+    .inline-block {
+      margin-right: 0;
+      margin-left: @component-padding;
+    }
   }
 
   // Limit inline-blocks from getting too long
