Remove margin-left from nested inline-blocks
So they don't have double padding

--- a/packages/status-bar/styles/status-bar.less
+++ b/packages/status-bar/styles/status-bar.less
@@ -37,6 +37,9 @@ status-bar {
     .inline-block {
       margin-right: 0;
       margin-left: @component-padding;
+      & > .inline-block {
+        margin-left: 0;
+      }
     }
   }
 
