Prevent repo link being full width

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -450,6 +450,10 @@
       padding-right: @component-padding;
     }
 
+    .link {
+      width: -webkit-fit-content; // prevents hover area being full-width
+    }
+
     .link,
     .text {
       margin: 0 15px @component-padding 15px;
