--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -91,7 +91,7 @@
     align-items: stretch;
   }
 
-  .btn.current-theme-settings {
+  .btn.active-theme-settings {
     margin-left: 2px;
     &::before {
       margin-right: 0;
