:art: .matching -> .character-match
Use class from autocomplete-plus for consistency

--- a/packages/fuzzy-finder/styles/fuzzy-finder.less
+++ b/packages/fuzzy-finder/styles/fuzzy-finder.less
@@ -1,7 +1,7 @@
 @import "ui-variables";
 
 // Highlight matched text
-.select-list .list-group .matching {
+.select-list .list-group .character-match {
   color: @text-color-highlight;
   font-weight: bold;
 }
