Replace text icons with SVG

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -78,6 +78,14 @@ atom-workspace.find-visible {
     }
   }
 
+  .btn > .icon {
+    width: 20px;
+    height: 16px;
+    vertical-align: middle;
+    fill: currentColor;
+    stroke: currentColor;
+  }
+
   .description {
     display: inline-block;
     .subtle-info-message {
