--- a/packages/settings-view/styles/package-update.less
+++ b/packages/settings-view/styles/package-update.less
@@ -34,6 +34,7 @@
       width: 100%;
       overflow: hidden;
       margin: 5px 0;
+      line-height: 1.3;
       color: @text-color-highlight;
     }
 
