:sparkles: Vertical center search path label
Fixes https://github.com/atom/one-dark-ui/issues/53

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -203,6 +203,11 @@ atom-workspace.find-visible {
     -webkit-flex-shrink: 0;
   }
 
+  .loading-spinner-tiny,
+  .loading-spinner-tiny + .inline-block {
+    vertical-align: middle;
+  }
+
   .no-results-overlay {
     visibility: hidden;
   }
