Add Check For Updates button

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -677,6 +677,7 @@
 
   .update-all-button {
     top: -4px; // visually centered to title
+    margin-left: 4px;
     right: 0;
     position: relative;
   }
