Add support for options.meta

--- a/packages/notifications/styles/notifications.less
+++ b/packages/notifications/styles/notifications.less
@@ -94,6 +94,8 @@ atom-notification {
   }
 
   &.fatal .meta,
+  &.has-meta .meta,
+  &.has-buttons .meta,
   &.has-close .close,
   &.has-detail .detail,
   &.has-stack .stack-toggle,
