--- a/packages/notifications/styles/notifications.less
+++ b/packages/notifications/styles/notifications.less
@@ -94,7 +94,7 @@ atom-notification {
   }
 
   &.fatal .meta,
-  &.has-meta .meta,
+  &.has-description .meta,
   &.has-buttons .meta,
   &.has-close .close,
   &.has-detail .detail,
@@ -189,7 +189,7 @@ atom-notification {
     }
   }
 
-  .meta-notification {
+  .description {
     font-size: .8em;
 
     p:last-child {
