--- a/packages/tabs/styles/tabs.less
+++ b/packages/tabs/styles/tabs.less
@@ -31,6 +31,9 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      &.temp {
+        font-style: italic;
+      }
     }
 
     .hide-icon {
