:bug: Allow click through events. Fixes https://github.com/atom/tabs/issues/130

--- a/packages/background-tips/styles/background-tips.less
+++ b/packages/background-tips/styles/background-tips.less
@@ -10,6 +10,7 @@ atom-workspace .horizontal .vertical {
 
 background-tips {
   display: block;
+  pointer-events: none;
 
   ul {
     -webkit-user-select: none;
