Fix styling issues

--- a/packages/settings-view/styles/available-package.less
+++ b/packages/settings-view/styles/available-package.less
@@ -255,6 +255,10 @@
           background: @background-color-warning;
         }
       }
+
+      .btn-toolbar > .btn-group {
+        float: left;
+      }
     }
 
     .meta-lower {
@@ -271,7 +275,6 @@
     }
 
     // End copy-paste from atom.io
-
   }
 
   // Remove hover styles if it's in a detail view
