Go to line from cursor position tile

--- a/packages/status-bar/styles/status-bar.less
+++ b/packages/status-bar/styles/status-bar.less
@@ -94,4 +94,9 @@ status-bar {
   .git-view {
     display: inline-block;
   }
+
+  .cursor-position a,
+  .cursor-position a:hover {
+    color: @text-color;
+  }
 }
