Use PackageCard in Available Updates panel
PackageCards show Update buttons whenever there are new versions.
They cards aren't half-wided, but they work better than the previous view.

Fixes #499
Fixes #529

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -260,6 +260,9 @@
           margin-right: -@component-padding;
         }
       }
+      .native-key-bindings, .alert-info {
+        margin-bottom: 15px;
+      }
     }
   }
 
