Show/hide packages through CSS

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -290,6 +290,10 @@
     margin: @section-padding 0;
   }
 
+  .sub-section.collapsed .package-container .row {
+    display: none;
+  }
+
   .sub-section-heading {
     color: @text-color-highlight;
     font-size: 1.4em;
