#458 Add syntax highlighting to the find mini-editor when in regex mode.
The Python regular expression grammer works well already for wrapping the
syntax elements in appropriate containers, the css of the highlighting
simply needed tweaking to work well in the find-editor context rather than
embeded in other code.

While this commit addresses most of #458, it doesn't highlight the replacement
placeholders. That will require additional enhancement.

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -150,6 +150,22 @@ atom-workspace.find-visible {
     padding-right: 64px; // leave some room for the results count
   }
 
+  .find-container atom-text-editor::shadow {
+    // Styles for regular expression highlighting
+    .regexp {
+      .escape {
+        color: rgb(51, 51, 255);
+      }
+      .range, .character-class {
+        color: rgb(51, 150, 51);
+      }
+      .keyword, .punctuation {
+        color: rgb(255, 51, 51);
+        font-weight: normal;
+      }
+    }
+  }
+
   // results count
   .find-meta-container {
     position: absolute;
