#458 Non-range characters in sets now stay black to differentiate them from ranges.

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -123,6 +123,9 @@ atom-workspace.find-visible {
       .range, .character-class {
         color: rgb(0, 200, 0);
       }
+      .set {
+        color: inherit;
+      }
       .keyword, .punctuation {
         color: rgb(255, 51, 51);
         font-weight: normal;
