Add zoom buttons

--- a/packages/image-view/styles/image-view.less
+++ b/packages/image-view/styles/image-view.less
@@ -51,6 +51,10 @@
       background-color: #000;
       background-image: url(@transparent-background-image);
     }
+
+    .btn-group {
+      margin: @spacing;
+    }
   }
 
 
