Use custom classes instead of bootstrap's

--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -290,7 +290,7 @@
     margin: @section-padding 0;
   }
 
-  .sub-section.collapsed .package-container .row {
+  .sub-section.collapsed .package-container .package-card {
     display: none;
   }
 
