--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -1,4 +1,5 @@
 @import "octicon-mixins";
+@import "octicon-utf-codes";
 @import "ui-variables";
 
 @section-padding: 4 * @component-padding;
@@ -288,19 +289,37 @@
 
   .sub-section {
     margin: @section-padding 0;
-  }
 
-  .sub-section.collapsed .package-container .package-card {
-    display: none;
-  }
+    .sub-section-heading {
+      color: @text-color-highlight;
+      font-size: 1.4em;
+      font-weight: bold;
+      line-height: 1;
+      -webkit-user-select: none;
+      cursor: pointer;
 
-  .sub-section-heading {
-    color: @text-color-highlight;
-    font-size: 1.4em;
-    font-weight: bold;
-    line-height: 1;
-    -webkit-user-select: none;
-    cursor: default;
+      &:after {
+        .icon(16px);
+        content: @fold;
+        position: absolute;
+        right: 0;
+        color: @text-color-subtle;
+      }
+
+      &:hover:after {
+        color: @text-color-highlight;
+      }
+    }
+
+    &.collapsed {
+      .sub-section-heading:after {
+        content: @unfold;
+      }
+
+      .package-container .package-card {
+        display: none;
+      }
+    }
   }
 
   .control-label {
