:green_heart: Fix failing spec

--- a/packages/status-bar/styles/status-bar.less
+++ b/packages/status-bar/styles/status-bar.less
@@ -85,6 +85,7 @@ status-bar {
     margin-right: -1px;
   }
 
+  .hide,
   .current-path:empty,
   .cursor-position:empty,
   .selection-count:empty {
