#458 Move styling back to the package instead of themes, but without hard-coded colors.
This provides sensible defaults for themes without burdening them with
mandatory changes to support highlighting.

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -261,3 +261,25 @@ atom-workspace.find-visible {
     }
   }
 }
+
+.find-container atom-text-editor::shadow {
+  // Styles for regular expression highlighting
+  .regexp {
+    .escape {
+      color: @text-color-info;
+    }
+    .range, .character-class, .wildcard {
+      color: @text-color-success;
+    }
+    .wildcard {
+      font-weight: bold;
+    }
+    .set {
+      color: inherit;
+    }
+    .keyword, .punctuation {
+      color: @text-color-error;
+      font-weight: normal;
+    }
+  }
+}
