--- a/packages/settings-view/styles/package-readme.less
+++ b/packages/settings-view/styles/package-readme.less
@@ -19,7 +19,7 @@
       max-width: 100%;
     }
 
-    // Tables
+    // Table
     table {
       display: block;
       margin-bottom: 1em;
@@ -44,6 +44,21 @@
           background-color: @background-color-highlight;
         }
       }
+    }
+
+    // Keybindings
+    kbd {
+      display: inline-block;
+      padding: .3em .4em;
+      font-size: .8em;
+      line-height: 1;
+      color: @text-color-highlight;
+      vertical-align: middle;
+      background-color: lighten(@base-background-color, 10%);
+      border: solid 1px @base-border-color;
+      border-bottom-color: darken(@base-border-color, 10%);
+      border-radius: @component-border-radius;
+      box-shadow: inset 0 -1px 0 darken(@base-border-color, 10%);
     }
 
   }
