Style more HTML elements in READMEs

--- a/packages/settings-view/styles/package-readme.less
+++ b/packages/settings-view/styles/package-readme.less
@@ -15,11 +15,26 @@
       color: @text-color-highlight;
     }
 
+    a {
+      color: @text-color-info;
+    }
+
+    hr {
+      border-color: @text-color-subtle;
+    }
+
+    blockquote {
+      border-left-color: @text-color-subtle;
+    }
+
+    pre {
+      margin-bottom: 1em;
+    }
+
     img {
       max-width: 100%;
     }
 
-    // Table
     table {
       display: block;
       margin-bottom: 1em;
@@ -46,7 +61,6 @@
       }
     }
 
-    // Keybindings
     kbd {
       display: inline-block;
       padding: .3em .4em;
