--- a/packages/settings-view/styles/settings-view.less
+++ b/packages/settings-view/styles/settings-view.less
@@ -229,14 +229,14 @@
     atom-text-editor[mini], atom-text-editor[mini]::shadow {
       opacity: .75;
       .selection .region {
-        background-color: rgba(0, 0, 0, .2);
+        background-color: contrast(@input-background-color, lighten(@input-background-color, 8%), darken(@input-background-color, 8%) );
       }
     }
 
     atom-text-editor[mini].is-focused, atom-text-editor[mini].is-focused::shadow {
       opacity: 1;
       .selection .region {
-        background-color: lighten(@background-color-info, 30%);
+      background-color: contrast(@input-background-color, lighten(@input-background-color, 12%), darken(@input-background-color, 12%) );
       }
     }
   }
