Force search results outlines to be in front of other highlights

--- a/packages/find-and-replace/styles/find-and-replace.less
+++ b/packages/find-and-replace/styles/find-and-replace.less
@@ -9,12 +9,14 @@ atom-text-editor::shadow {
     border-radius: @component-border-radius;
     border: 1px solid @syntax-result-marker-color;
     box-sizing: border-box;
+    z-index: 0;
   }
 
   .current-result .region {
     border-radius: @component-border-radius;
     border: 1px solid @syntax-result-marker-color-selected;
     box-sizing: border-box;
+    z-index: 0;
   }
 
   .find-result,
