--- a/packages/markdown-preview/styles/markdown-preview.less
+++ b/packages/markdown-preview/styles/markdown-preview.less
@@ -128,6 +128,9 @@
     line-height: 1.45;
     background-color: @syntax-background-color;
     border-radius: 3px;
+    &::shadow ::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   atom-text-editor {
