Increase contrast of close button

--- a/packages/notifications/styles/notifications.less
+++ b/packages/notifications/styles/notifications.less
@@ -145,18 +145,16 @@ atom-notification {
     text-align: center;
     font-size: 16px;
     text-shadow: none;
-    color: inherit;
-    opacity: .3;
+    color: black;
+    opacity: .4;
     &:hover, &:focus {
       opacity: 1;
-      color: inherit;
     }
     &:active {
       opacity: .2;
     }
     &:before {
       margin: 0;
-      color: inherit;
     }
   }
 
